assets/css/style.css
@font-face {
    font-family: Headliner;
    src: url(../fonts/HeadlinerNo.45.ttf);
}

.title {
    text-align: center;
    color: white;
    font-size: 12em;
    margin-top: 40px;
    font-family: 'Headliner', sans-serif;
    text-shadow: 2px 2px #000;
}

.headerImage {
    background: url('../images/bg3.jpg');
    background-position: center center;
    height: 400px;
    background-size: cover;
}

#show-number {
    line-height: 15px;
}

.startButtonCenter {
    text-align: center;
    margin: 10px 0 10px 0;
    width: 60%;
    padding: 10px;
    height: 100hv;
    font-size: 32px;
    font-family: 'Allerta Stencil', sans-serif;
    border: 8px; 
}

button {
    width:300px;
    height:80px;
    font-weight: bold;
    color: white;
    background-color: #515836;
    border-color:rgb(21, 43, 21);
    
    
}

.timer {
    color: red;
    font-family: 'Allerta Stencil', sans-serif;
    font-weight: 900;
}

.startButtonRow {
    height: 100hv;
}

.questions {
    padding-bottom: 30px;
}

.timer {
    margin: 20px;
    height: 30px;
}

div:empty {
    height: 30px;
 }

 .bottomButton {
    text-align: center;
 }

 footer {
     text-align: center;
     margin: 20px;
 }
 
 @media only screen and (max-width: 600px) {
 .title {
    text-align: center;
    color: white;
    font-size: 6em;
    margin-top: 1em;
    font-family: 'Headliner', sans-serif;
    text-shadow: 2px 2px #000;
}

.timer {
    margin-bottom: 40px;
    height: 30px;
}
}

